fix(accordian): use `overflow: hidden` only be when closed (#2028)

--- a/consumables/scss/components/accordion/accordion.scss
+++ b/consumables/scss/components/accordion/accordion.scss
@@ -63,6 +63,8 @@
 }
 
 .bx--accordion__item--active {
+  overflow: initial;
+
   .bx--accordion__content {
     max-height: 1000px;
     visibility: visible;
